# IcecreamCubes

./: .gitignore  CMakeLists.txt  README.md
IcecreamClient/: CMakeLists.txt  ClientNetworkManager.cpp  ClientNetworkManager.h  ResourceCacheManager.cpp  ResourceCacheManager.h  Window.cpp  Window.h  main.cpp  resources.qrc
IcecreamClient/qml/: Button.qml  TextLineInput.qml  main.qml
IcecreamServer/: AIManager.cpp  AIManager.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  EntityManager.cpp  EntityManager.h  Logging.cpp  NetworkManager.cpp  NetworkManager.h  PermissionManager.cpp  PermissionManager.h  PhysicsManager.cpp  PhysicsManager.h  PluginManager.cpp  PluginManager.h  SaveManager.cpp  SaveManager.h  config.h.in  main.cpp
